--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+         	<groupId>org.springframework.boot</groupId>
+         	<artifactId>spring-boot-devtools</artifactId>
+         	<version>2.0.3.RELEASE</version>
+      	</dependency>
+		
+		
 <!-- 		<dependency> -->
 <!--     		<groupId>org.springframework.boot</groupId> -->
 <!--     		<artifactId>spring-boot-devtools</artifactId> -->
