--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,23 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		
+		<dependency>
+         	<groupId>org.springframework.boot</groupId>
+         	<artifactId>spring-boot-devtools</artifactId>
+         	<version>2.0.3.RELEASE</version>
+      	</dependency>
+		
+		
+<!-- 		<dependency> -->
+<!--     		<groupId>org.springframework.boot</groupId> -->
+<!--     		<artifactId>spring-boot-devtools</artifactId> -->
+<!--     		<version>1.3.0.RELEASE</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
