--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/studentrequest?useUnicode=true
 spring.datasource.username=user1
 spring.datasource.password=test123
 mybatis.type-aliases-package=net.student.dto
+spring.thymeleaf.cache=false
+spring.freemarker.cache=false
+spring.groovy.template.cache=false
+spring.velocity.cache=false
