--- a/pom.xml
+++ b/pom.xml
@@ -51,17 +51,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-<<<<<<< HEAD
-	
 		
-		<dependency>
-         	<groupId>org.springframework.boot</groupId>
-         	<artifactId>spring-boot-devtools</artifactId>
-         	<version>2.0.3.RELEASE</version>
-      	</dependency>
-		
-		
-=======
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -69,22 +59,13 @@
 			<version>2.0.3.RELEASE</version>
 		</dependency>
 
-       <!-- 웹소켓 -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-websocket</artifactId>
-			<version>4.1.6.RELEASE</version>
-
-		</dependency>
-
-
-
-		<!-- <dependency> -->
-		<!-- <groupId>org.springframework.boot</groupId> -->
-		<!-- <artifactId>spring-boot-devtools</artifactId> -->
-		<!-- <version>1.3.0.RELEASE</version> -->
-		<!-- </dependency> -->
->>>>>>> 72df9986e3b2254d46733284f385cb06e26bcc3f
+<!--        웹소켓 -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework</groupId> -->
+<!-- 			<artifactId>spring-websocket</artifactId> -->
+<!-- 			<version>4.1.6.RELEASE</version> -->
+<!-- 		</dependency> -->
+		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
