--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<dependency>
          	<groupId>org.springframework.boot</groupId>
          	<artifactId>spring-boot-devtools</artifactId>
-         	<version>2.0.3.RELEASE</version>
+<!--          	<version>2.0.3.RELEASE</version> -->
       	</dependency>
 		
 
