--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,14 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+/.metadata/
+
+/.metadata/
+Servers/Pivotal tc Server Developer Edition v3.2-config/catalina.policy
+Servers/Pivotal tc Server Developer Edition v3.2-config/catalina.properties
+Servers/Pivotal tc Server Developer Edition v3.2-config/context.xml
+Servers/Pivotal tc Server Developer Edition v3.2-config/jmxremote.access
+Servers/Pivotal tc Server Developer Edition v3.2-config/jmxremote.password
+Servers/Pivotal tc Server Developer Edition v3.2-config/server.xml
+Servers/Pivotal tc Server Developer Edition v3.2-config/tomcat-users.xml
+Servers/Pivotal tc Server Developer Edition v3.2-config/web.xml
